--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,7 @@
-[default]
+[profile.default]
 src = 'src'
 out = 'out'
 libs = ['lib']
+gas_reports = ["*"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
